2007-06-12  Jonathan Pobst  <monkey@jpobst.com>

	* NotfiyIcon.cs: Add MouseDoubleClick event, hook up MouseClick event.

2007-06-12  Jonathan Pobst  <monkey@jpobst.com>

	* ErrorProvider.cs: Implement 2.0 stuffs.

2007-06-12  Jonathan Pobst  <monkey@jpobst.com>

	* DomainUpDown.cs: Implement 2.0 stuffs.

2007-06-12  Jonathan Pobst  <monkey@jpobst.com>

	* CheckedListBox.cs: Fix RefreshItems signature.

2007-06-12  Jonathan Pobst  <monkey@jpobst.com>

	* PictureBox.cs: Implement 2.0 stuffs.

2007-06-12  Andreia Gaita  <avidigal@novell.com>
	
	* TabControl.cs: Check if there are tabpages before checking
	the selected index - fix #81802 (font changes raise a ResizeTabs
	call on controls.add, which blew up nicely with no tabpages)

2007-06-11  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs:
	* ListViewItem.cs: Implement 2.0 ItemSelectionChanged event.

2007-06-11  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs:
	* ListViewItem.cs: In VirtualMode the selection information
	resides in the ListView, rather than in the Items. Also, throw
	InvalidOperationExceptions when VirtualMode is being used and
	CheckedItemCollection is accessed.

2007-06-08  Jonathan Pobst  <monkey@jpobst.com>

	* ComboBox.cs: Add ScaleControl.

2007-06-08  Jonathan Pobst  <monkey@jpobst.com>

	* ButtonBase.cs: ButtonBaseAccessibleObject.State should not be visible to 1.1.

2007-06-08  Jonathan Pobst  <monkey@jpobst.com>

	* GroupBox.cs: Add 2.0 stuffs.

2007-06-08  Jonathan Pobst  <monkey@jpobst.com>

	* Panel.cs: Add autosize properties/event.

2007-06-07  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs:
	- When we remove a control, remove it from the collection before performing the layout.
	- Setup an internal property for explicit_bounds.
	- Don't let the UpdateBounds in CreateHandle overwrite our explicit bounds.
	- Perform a layout when we set a new AutoSizeMode.

2007-06-07  Jonathan Pobst  <monkey@jpobst.com>

	* ScrollableControl.cs: Add 2.0 stuffs.