@@ -1,5 +1,9 @@
 2007-06-12  Jonathan Pobst  <monkey@jpobst.com>
 
+	* NumericUpDown.cs: Add 2.0 stuffs.
+
+2007-06-12  Jonathan Pobst  <monkey@jpobst.com>
+
 	* NotfiyIcon.cs: Add MouseDoubleClick event, hook up MouseClick event.
 
 2007-06-12  Jonathan Pobst  <monkey@jpobst.com>
